gcc/testsuite/g++.dg/cpp0x/pr34054.C
// PR c++/34054
// { dg-do compile }
// { dg-options "-std=c++11" }

template<typename... T> T foo() {} // { dg-error "not expanded|T" }
